--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -91,7 +91,10 @@
     </div>
   </div>
   <div class="main">
-    <app-video-player [currentVideo]="currentVideo"></app-video-player>
+    <app-video-player
+      class="vid-player"
+      [currentVideo]="currentVideo"
+    ></app-video-player>
     <div class="menu">
       <div class="videos-box-d">
         <h2 class="sim">Artist Videos</h2>
