--- a/src/app/artist-list/artist-list.component.css
+++ b/src/app/artist-list/artist-list.component.css
@@ -1,4 +1,10 @@
-.artists,
+.artists {
+  display: flex;
+  max-width: 100%;
+  flex-direction: row;
+  overflow-x: scroll;
+}
+
 .fav-card {
   display: flex;
   max-width: 100%;
@@ -21,6 +27,16 @@
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
+  .artists {
+    display: flex;
+    max-width: 100%;
+    flex-direction: row;
+    overflow: auto;
+  }
+
+  .artist-card {
+    margin: 1vw 1vw 0 1vw;
+  }
   .artists::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
