--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,1 +1,2 @@
+<app-header></app-header>
 <app-result-entry *ngFor="let item of searchResults" [artist]="item" (artistClicked)="goToArtist($event)"></app-result-entry>
