--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -167,30 +167,35 @@ a:visited {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    /* position: relative; */
+    justify-content: space-between;
   }
   .header {
-    position: relative;
-    width: 100vw;
-    max-height: 33vh;
+    /* position: relative; */
+    max-width: 100vw;
+    /* max-height: 33vh; */
+    display: flex;
+    flex-direction: column;
+  }
+
+  .app-header {
+    max-height: 9vh;
   }
   .artist-headline {
     display: flex;
     margin: 0;
-    position: relative;
-    left: 30vw;
-    bottom: 7vw;
+    justify-content: flex-end;
+    margin: 0 10vw 1vh 10vw;
   }
 
   .img-box {
-    width: 13vw;
-    height: 13vw;
+    width: 18vh;
+    height: 18vh;
     position: relative;
     flex-basis: content;
   }
   .artist-img {
-    width: 13vw;
-    height: 13vw;
+    width: 18vh;
+    height: 18vh;
     border-radius: 50%;
     -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
     -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
@@ -201,7 +206,7 @@ a:visited {
   .fa-minus-circle {
     color: white;
     opacity: 0.8;
-    font-size: 2.5vw;
+    font-size: 2vw;
     position: absolute;
     bottom: 1.4vh;
     right: 0vw;
@@ -213,20 +218,22 @@ a:visited {
 
   .artist-name {
     font-variant: small-caps;
-    font-size: 7vw;
+    font-size: 5vh;
     overflow-wrap: break-word;
     word-wrap: break-word;
     hyphens: auto;
     flex-grow: 2;
     margin: 0 0 0 4vw;
-    line-height: 60px;
+    line-height: 30px;
   }
 
   .bio-box-d {
     width: 40vw;
-    height: 10vw;
+    height: 7vw;
     overflow: auto;
-    margin: 1vw 0 0 4vw;
+    margin: 0 0 0 4vw;
+    padding: 1vh 0;
+    font-size: 1.7vh;
   }
 
   .bio-box-d::-webkit-scrollbar-track {
@@ -248,6 +255,21 @@ a:visited {
   }
   .main {
     display: flex;
+    margin-left: 2vw;
+    max-width: 95vw;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    background-color: #1e1d1d;
+    border: 1px solid white;
+  }
+  .menu::-webkit-scrollbar {
+    display: none;
+  }
+  .vid-player {
+    flex-grow: 3;
   }
   .remove-fav,
   .add-fav {
@@ -262,23 +284,13 @@ a:visited {
   .add-fav:active {
     color: #05992f;
   }
-  .menu {
-    display: flex;
-    flex-direction: column;
-    overflow: scroll;
-    background-color: #1e1d1d;
-    border: 1px solid white;
-  }
-  .menu::-webkit-scrollbar {
-    display: none;
-  }
 
   .footer-m {
     display: flex;
     justify-content: center;
-    width: 100vw;
+    /* width: 100vw; */
     bottom: 1vw;
-    margin-top: 5vh;
+    margin-top: 1vh;
   }
   .hidden {
     display: none;
