--- a/src/app/video-card/video-card.component.css
+++ b/src/app/video-card/video-card.component.css
@@ -63,7 +63,7 @@
     font-size: 1.5vw;
     position: absolute;
     bottom: 0vh;
-    right: 1vw;
+    right: 0vw;
   }
   .remove-fav:active,
   .add-fav:active {
@@ -71,9 +71,8 @@
   }
 
   .video-name {
-    max-height: 3vw;
-    overflow-y: scroll;
-
+    max-height: auto;
+    overflow: visible;
     overflow-wrap: break-word;
     word-wrap: break-word;
     hyphens: auto;
@@ -81,22 +80,5 @@
     line-height: 15px;
     font-size: 1vw;
     margin: 0.8vh 0;
-  }
-  .video-name::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: white;
-    border-radius: 10px;
-  }
-
-  .video-name::-webkit-scrollbar {
-    width: 5px;
-    background-color: black;
-  }
-
-  .video-name::-webkit-scrollbar-thumb {
-    background-color: black;
-    border: 2px solid #555555;
-    border-radius: 10px;
   }
 }
