--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -52,7 +52,7 @@
           end developer. As a person of many passions i believe coding is one of
           my new ones and its a good way to generate income. This app is great
           way to get visuals of artists. Make sure to add your favorite artists
-          to the favorite section so you dont have to search them again, i put
+          to the favorites section so you dont have to search them again, i put
           lil uzi and gunna. You can checkout some of my work on Github and
           reach me on Linked In with the links above
         </p>
