--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -50,7 +50,7 @@
           the risks. I live in the Detroit michgan area where i also attended a
           Grand Circus bootcamp to gain skills needed to become a junior front
           end developer. As a person of many passions i believe coding is one of
-          my new ones and its a good way to generate income. This app is great
+          my new ones and its a good way to generate income. This app is a great
           way to get visuals of artists. Make sure to add your favorite artists
           to the favorites section so you dont have to search them again, i put
           lil uzi and gunna. You can checkout some of my work on Github and
