--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -82,6 +82,9 @@ a:visited {
     display: flex;
     justify-content: center;
   }
+  .ap {
+    height: 10vh;
+  }
   .h1 {
     margin: 0;
     font-size: 4vw;
@@ -90,11 +93,14 @@ a:visited {
   .devs-container {
     display: flex;
     padding-top: 3vh;
+    width: 100vw;
+    justify-content: space-between;
   }
   .dev-box {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 35vw;
   }
   .headline {
     display: flex;
@@ -123,8 +129,8 @@ a:visited {
     align-items: center;
   }
   .bio {
-    font-size: 1.5vw;
-    line-height: normal;
+    font-size: 1.2vw;
+    line-height: 25px;
     margin: 2vh 0;
   }
   .absh {
