--- a/src/app/artist-list/artist-list.component.css
+++ b/src/app/artist-list/artist-list.component.css
@@ -4,15 +4,23 @@
   flex-direction: row;
   overflow-x: scroll;
 }
-
+.fav-card-m {
+  display: flex;
+  max-width: 100%;
+  flex-direction: row;
+  overflow-x: scroll;
+}
 .fav-card {
+  display: none;
+}
+/* .fav-card {
   display: flex;
   max-width: 100%;
   flex-direction: row;
   max-height: 40vw;
   overflow-y: hidden;
   overflow-x: scroll;
-}
+} */
 
 .artist-card {
   margin: 3vw 2vw 0 2vw;
@@ -27,15 +35,27 @@
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
+  .fav-card-m {
+    display: none;
+  }
   .artists {
     display: flex;
     max-width: 100%;
     flex-direction: row;
     overflow: auto;
+    overflow-y: hidden;
   }
 
   .artist-card {
     margin: 1vw 1vw 0 1vw;
+    width: 8;
+  }
+  .fav-card {
+    display: flex;
+    max-width: 100%;
+    flex-direction: row;
+    overflow: auto;
+    overflow-y: hidden;
   }
   .artists::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -45,11 +65,28 @@
   }
 
   .artists::-webkit-scrollbar {
-    height: 7px;
+    height: 10px;
     background-color: black;
   }
 
   .artists::-webkit-scrollbar-thumb {
+    background-color: black;
+    border: 2px solid #555555;
+    border-radius: 10px;
+  }
+  .fav-card::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    border-radius: 10px;
+  }
+
+  .fav-card::-webkit-scrollbar {
+    height: 10px;
+    background-color: black;
+  }
+
+  .fav-card::-webkit-scrollbar-thumb {
     background-color: black;
     border: 2px solid #555555;
     border-radius: 10px;
