--- a/src/app/artist-list/artist-list.component.html
+++ b/src/app/artist-list/artist-list.component.html
@@ -10,3 +10,12 @@
     [artist]="item"
   ></app-artist-card>
 </div>
+<div *ngIf="router.url === '/favorites'" class="fav-card-m">
+  <app-artist-card
+    (artistClicked)="goToArtist($event)"
+    (favoriteEvent)="updateFavorites($event)"
+    class="artist-card"
+    *ngFor="let item of list | slice: 0:10"
+    [artist]="item"
+  ></app-artist-card>
+</div>
