--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,2 +1,10 @@
-<app-header></app-header>
-<app-result-entry *ngFor="let item of searchResults" [artist]="item" (artistClicked)="goToArtist($event)"></app-result-entry>
+<main>
+  <app-header></app-header>
+  <div class="results">
+    <app-result-entry
+      *ngFor="let item of searchResults"
+      [artist]="item"
+      (artistClicked)="goToArtist($event)"
+    ></app-result-entry>
+  </div>
+</main>
