--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -166,8 +166,7 @@ a:visited {
   .desktop-section {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    justify-content: space-between;
+    height: 97vh;
   }
   .header {
     /* position: relative; */
@@ -256,8 +255,8 @@ a:visited {
   }
   .main {
     display: flex;
-    margin-left: 2vw;
-    max-width: 95vw;
+    margin-left: 3vw;
+    max-width: 90vw;
   }
   .menu {
     display: flex;
@@ -286,13 +285,6 @@ a:visited {
     color: #05992f;
   }
 
-  .footer-m {
-    display: flex;
-    justify-content: center;
-    /* width: 100vw; */
-    bottom: 1vw;
-    margin-top: 1vh;
-  }
   .hidden {
     display: none;
   }
@@ -311,5 +303,11 @@ a:visited {
   .sim {
     font-size: 2vw;
     text-align: center;
+  }
+  .footer-d {
+    display: flex;
+    justify-content: center;
+    bottom: 1vw;
+    margin-top: 3vh;
   }
 }
