--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -17,11 +17,14 @@ a:visited {
   text-align: center;
 }
 .devs-container {
-  display: inline-block;
-  padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .dev-box {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .headline {
   display: flex;
@@ -30,7 +33,7 @@ a:visited {
 }
 .name {
   margin: 0 5vw;
-  font-size: 7vw;
+  font-size: 6vw;
 }
 
 .fab {
@@ -40,8 +43,8 @@ a:visited {
 }
 .headshot {
   border-radius: 50%;
-  max-width: 30vw;
-  max-height: 30vw;
+  max-width: 20vw;
+  max-height: 20vw;
   -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
   -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
   box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
@@ -49,23 +52,26 @@ a:visited {
 .dev {
   display: flex;
   margin: 0 2vw;
+  flex-direction: column;
+  align-items: center;
 }
 .bio {
-  font-size: 4.5vw;
-  margin: 0 0 0 2vw;
+  font-size: 3.5vw;
+  margin: 0;
   line-height: 2.5vh;
   text-align: justify;
+  line-height: 16px;
 }
 .abd {
   display: flex;
 }
 .ab {
   margin: 0 2vw 0 0;
-  order: 1;
+  order: 2;
 }
 
 .absh {
-  order: 2;
+  order: 1;
 }
 
 .abh {
@@ -75,6 +81,13 @@ a:visited {
 
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
+  .bio {
+    font-size: 2.5vw;
+    margin: 0;
+    line-height: 2.5vh;
+    text-align: justify;
+    line-height: 28px;
+  }
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
@@ -95,6 +108,7 @@ a:visited {
     padding-top: 3vh;
     width: 100vw;
     justify-content: space-between;
+    flex-direction: row;
   }
   .dev-box {
     display: flex;
