about us updates

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -61,7 +61,7 @@
             to become a Front End Developer. As a person of many passions,
             coding is a new and exciting opportunity for learning and job
             potential. Please checkout my linkedin and github repository for my
-            portfolio.
+            portfolio. My favorite artists are lil uzi vert and gunna.
           </p>
           <img
             src="assets/ab-headshot.jpg"
@@ -69,7 +69,6 @@
             class="headshot absh"
           />
         </div>
-
       </div>
       <div class="dev-box">
         <div class="headline">
@@ -102,7 +101,8 @@
             as well as my passion and skills in responsive, accessible, user
             focused development. Accessibility and diversity are very important
             to me, and I hope to make that a focus of my personal and
-            professional work as I move forward in my career.
+            professional work as I move forward in my career. You'll often here
+            me listening to MIA, Sia, Frank Ocean, and Outkast.
           </p>
         </div>
       </div>
