--- a/src/styles.css
+++ b/src/styles.css
@@ -19,8 +19,8 @@ body {
 }
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
-  body {
+  /* body {
     height: 95vh;
     overflow: hidden;
-  }
+  } */
 }
