--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -174,6 +174,7 @@ a:visited {
     /* max-height: 33vh; */
     display: flex;
     flex-direction: column;
+    margin-bottom: 1vh;
   }
 
   .app-header {
@@ -264,6 +265,7 @@ a:visited {
     overflow: scroll;
     background-color: #1e1d1d;
     border: 1px solid white;
+    min-width: 25vw;
   }
   .menu::-webkit-scrollbar {
     display: none;
