--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -111,7 +111,7 @@
       </div>
     </div>
   </div>
-  <div class="footer-d" [ngClass]="{ hidden: bioExpand }">
+  <!-- <div class="footer-d" [ngClass]="{ hidden: bioExpand }">
     <a routerLink="/about">About the Developers</a>
-  </div>
+  </div> -->
 </section>
