--- a/src/app/video-card/video-card.component.css
+++ b/src/app/video-card/video-card.component.css
@@ -8,6 +8,7 @@
 }
 .img-box {
   position: relative;
+  max-width: 28vw;
 }
 .video-img {
   -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
@@ -45,6 +46,9 @@
   .video-name {
     font-size: 1.8vw;
     margin: 0.8vh 0;
+  }
+  .video-img {
+    max-width: 21vw;
   }
 }
 /* desktop view _____________________________ */
