--- a/src/app/wireframes/wireframes.component.html
+++ b/src/app/wireframes/wireframes.component.html
@@ -1,11 +1,9 @@
 <app-header></app-header>
 <div>
-  <a href="assets/Turn.up Wireframes.pdf" download
+  <a
+    href="https://github.com/katibjohnson/turn.up-music-app/blob/master/Turn.up%20Wireframes.pdf"
+    target="_blank"
     >Download a PDF of our Wireframes</a
   >
+  <img src="assets/Turn.upWireframes.png" alt="turn.up wireframes" />
 </div>
-<pdf-viewer
-  [src]="pdfSrc"
-  [render-text]="true"
-  style="display: block"
-></pdf-viewer>
